--- a/life/xupt_2021tfb.html
+++ b/life/xupt_2021tfb.html
@@ -34,15 +34,15 @@
 <meta property="article:author" content="半岛的孤城">
 <meta property="article:tag" content="西安邮电大学">
 <meta property="article:tag" content="经济与管理学院">
-<meta property="article:tag" content="雁塔校区">
 <meta property="article:tag" content="篮球">
 <meta property="article:tag" content="腾飞杯">
+<meta property="article:tag" content="雁塔校区">
 <meta name="twitter:card" content="summary">
 <meta name="twitter:image" content="https://www.bandao.ltd/assets/xupt/xupt_2021tfb.jpg">
   
   
   
-  <meta name="keywords" content="西安邮电大学,经济与管理学院,雁塔校区,篮球,腾飞杯">
+  <meta name="keywords" content="西安邮电大学,经济与管理学院,篮球,腾飞杯,雁塔校区">
 
   <!-- feed -->
   
